Implemented numbers endpoint and service, cleaned up fake-data.js, added some more documentation
